--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.8"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.9"
   }
 }
